--- a/deployment.yaml
+++ b/deployment.yaml
@@ -2,17 +2,19 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: go-launchdarkly
-  namespace: argocd
 spec:
   destination:
-    namespace: argocd
+    name: 'sample-app'
+    namespace: 'argocd'
     server: 'https://kubernetes.default.svc'
-  project: default
   source:
     path: deployment.yaml
-    repoURL: https://github.com/arunprasath42/Go-Launchdarkly.git
+    repoURL: 'https://github.com/arunprasath42/Go-Launchdarkly.git'
     targetRevision: HEAD
+  sources: []
+  project: default
   syncPolicy:
     automated:
       prune: true
       selfHeal: true
+
