Updated deployment.yaml file

--- a/kubernetes-mainfests/deployment.yaml
+++ b/kubernetes-mainfests/deployment.yaml
@@ -17,3 +17,5 @@ spec:
       containers:
       - name: go-launchdarkly
         image: 9994810592/go-launchdarkly:1.0.0
+        ports:
+        - containerPort: 80
