--- a/kubernetes-mainfests/workflow.yaml
+++ b/kubernetes-mainfests/workflow.yaml
@@ -1,7 +1,8 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Workflow
 metadata:
-  generateName: go-launchdarkly-
+  name: go-launchdarkly
+  namespace: argo 
 spec:
   entrypoint: go-launchdarkly
   templates:
