--- a/kubernetes-mainfests/workflow.yaml
+++ b/kubernetes-mainfests/workflow.yaml
@@ -13,7 +13,7 @@ spec:
         value: 9994810592/go-launchdarkly:1.0.0
     container:
       image: "{{inputs.parameters.image}}"
-      command:  ["usr/local/bin/go-launchdarkly"]
+      command:  [ "LaunchDarkly" ]
       args: ["--port=80"]
       resources:
         limits:
